# wsl-claude-code-puyoai2

./: .gitignore  CMakeLists.txt  claude.md  puyo_game_information.md  requirements.txt  setup.py  test_cpp  test_game_modes  test_quick_turn
docs/: 001-project-setup.md  002-game-engine-core.md  003-chain-system.md  004-garbage-puyo-system.md  005-game-modes.md  006-python-bindings.md  007-python-ui.md  007a-ui-bugfix.md  007b-ui-bugfix2.md  008-ai-framework.md  009-battle-system.md  010-testing-documentation.md  011-gravity-optimization.md  012-quick-turn-fix.md  013-next-display.md  014-chain-system-integration.md  015-score-system-integration.md  016-ai-autonomous-play.md  017-emulator-fixes.md  018-ai-decision-improvements.md  019-advanced-ai-systems.md  020-ai-performance-improvements.md  test-results-001.md  test-results-002.md  test-results-003.md  test-results-004.md  test-results-006.md  test-results-007.md  test-results-007a.md  test-results-008.md  test-results-012.md  test-results-013.md  test-results-014.md  test-results-015.md  test-results-016.md  test-results-017.md  test-results-018.md
report/: memo.md  report_claude_code.md  report_template.md
tests/: debug_wall_kick  debug_wall_kick.cpp  debug_wall_kick_detail  debug_wall_kick_detail.cpp  run_tests.py  test_ai_autonomous_016.py  test_ai_decision_improvements_018  test_ai_decision_improvements_018.cpp  test_ai_decision_improvements_018.py  test_ai_framework_008.py  test_ai_mode_integration.py  test_all_ais_integration_019final.py  test_chain_score_015.py  test_chain_search_ai_019a.py  test_cpp_basic  (+19 more)
(+48 files in other folders)
